# ai-data-mine-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: customers.csv  products.csv
kaggle/: llm_DaMi.ipynb
src/: mcp_server.py
src/agent/: __init__.py  agent_ollama.py  system_prompt.py  utils.py
src/environment/: __init__.py  utils.py
src/tools/: __init__.py
src/tools/clustering/: clustering_tools.py
src/tools/data_loading/: data_loading_tools.py  data_loading_utils.py
src/tools/math/: math_tools.py
src/tools/visualization/: visualization_tools.py  visualization_utils.py
src/ui/: chat_interface.py  css_styling.py
